nivasa-macros/tests/trybuild/on_event_empty_name.stderr
error: `#[on_event]` expects a non-empty event name like `#[on_event("event_name")]`
 --> tests/trybuild/on_event_empty_name.rs:6:16
  |
6 |     #[on_event("")]
  |                ^^
